# polkalink

./: .gitignore  Cargo.toml  README.md  govarance.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
pallets/data-registry/: Cargo.toml
pallets/data-registry/src/: lib.rs
pallets/data-verification/: Cargo.toml
pallets/data-verification/src/: lib.rs
pallets/partner-registry/: Cargo.toml
pallets/partner-registry/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: App.jsx  data_verification.rs  index.css  lib.rs  main.jsx  pallet_data_verification.rs  pallet_partner_registry.rs  partner_registry.rs
src/components/: Dashboard.jsx  Header.jsx  Hero.jsx  Layout.jsx  Navbar.jsx  PartnerRegistration.jsx  Sidebar.jsx
src/context/: PolkadotContext.jsx
src/contexts/: PolkadotContext.jsx
src/pages/: Landing.jsx
src/pallets/: mod.rs  partner_registry.rs
web/: README.md  index.html  tailwind.config.ts
web/src/: App.tsx  index.css
web/src/components/: Navbar.tsx
web/src/contexts/: PolkadotContext.tsx
web/src/pages/: Analytics.tsx  Dashboard.tsx  DataVerification.tsx  Governance.tsx  Landing.tsx  Partners.tsx  Settings.tsx
